--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "express": "^4.17.1",
-    "mongoose": "^5.12.15"
+    "helmet": "^4.6.0",
+    "mongoose": "^5.12.15",
+    "nodemon": "^2.0.8"
   },
   "devDependencies": {
     "eslint": "^7.29.0"
